--- a/frontend/styles/shop.css
+++ b/frontend/styles/shop.css
@@ -1,14 +1,11 @@
 body , html{
-    
     display: flex;
     flex-direction: column;
     justify-content: center;
-   
+    flex-shrink: 1; 
+    overflow-x: hidden;
     font-family: 'Inter', sans-serif;
 }
-
-
-
 
 footer{
     position: relative;
@@ -52,11 +49,14 @@ h4 {
 
 .header-content {
     display: flex;
-    justify-content: space-between;
     flex-direction: row;
     align-items: center;
-    gap: 10px;
     padding: 10px;
+    gap: 10px;
+}
+.header-content .icon{
+    height: 120px;
+    width: 150px; 
 }
 
 .header-buttons {
@@ -64,17 +64,18 @@ h4 {
     gap: 10px;
     margin-left: auto;
 }
-
-.icon {
-    width: 200px;
-    max-height: 120px;
+  
+.search-container{
+    flex: 1;
+    min-width: 0;
 }
   
-#search-field {
+.search-field {
+    flex: 1;
     flex-grow: 1;
-    min-width: 700px;
     height: 50px;
-    max-width: 1600px;
+    width: 100%;
+    display: flex;
     padding: 0.5rem 1rem;
     font-size: 1rem;
     border: 1px solid gray;
